--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,15 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
 
-    compile "com.github.DaikonWeb:topinambur:1.2.4"
+    compile 'com.github.DaikonWeb:topinambur:1.2.4'
 
-    testImplementation "com.github.DaikonWeb:daikon:1.2.4"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
-    testImplementation "net.wuerl.kotlin:assertj-core-kotlin:0.2.1"
+    testImplementation 'com.github.DaikonWeb:daikon:1.2.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testImplementation 'net.wuerl.kotlin:assertj-core-kotlin:0.2.1'
 }
 
 compileKotlin {
