--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20'
     id 'java-library'
 }
 
@@ -11,9 +11,9 @@ repositories {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
-    compile 'com.github.DaikonWeb:topinambur:1.2.6'
+    implementation 'com.github.DaikonWeb:topinambur:1.5.0'
 
-    testImplementation 'com.github.DaikonWeb:daikon:1.3.6'
+    testImplementation 'com.github.DaikonWeb:daikon:1.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
     testImplementation 'net.wuerl.kotlin:assertj-core-kotlin:0.2.1'
